deployment/django/deploy.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 4
  labels:
    app: django-app
  name: django-app
spec:
  replicas: 3
  selector:
    deploymentconfig: django-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: django-app
        deploymentconfig: django-app
    spec:
      containers:
      - image: 172.30.1.1:5000/demo-project/django-app@sha256:ea30908e3c2a07466e6964db7c0401379968189abc82689ec84d3769cf7cb10f
        imagePullPolicy: Always
        name: django-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - django-app
      from:
        kind: ImageStreamTag
        name: django-app:latest
        namespace: demo-project
      lastTriggeredImage: 172.30.1.1:5000/demo-project/django-app@sha256:ea30908e3c2a07466e6964db7c0401379968189abc82689ec84d3769cf7cb10f
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
