deployment/django/svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: django-app
  name: django-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: django-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
